public/css/lorekeeper.css
/* ... */
.btn.btn-danger {
    background-color: var(--dark-red);
    border: 3px double var(--dark-red);
}

.btn.btn-success {
    background-color: var(--green);
    border-color: var(--green);
}

.btn.btn-outline-success {
    color: var(--green);
    border-color: var(--green);
}

.btn.btn-outline-success:hover {
    background-color: var(--green);
    color: var(--white);
    border-color: var(--green);
}

.btn.btn-outline-primary,
.btn.btn-outline-info {
    color: var(--coal);
    border-color: var(--coal);
}

.btn.btn-outline-primary:hover,
.btn.btn-outline-info:hover {
    background-color: var(--coal);
    color: var(--white);
    border-color: var(--coal);
}

.dropdown-menu {
    border-radius: 0;
    border: none;
    background-color: var(--coal);
}

.dropdown-menu .dropdown-item {
    color: var(--light-purple);
}

.dropdown-menu .dropdown-item:hover {
    background-color: var(--coal);
    color: var(--purple);
}

.d-flex {
    align-items: flex-start;
}

/**************************************************************************************************

    Base styles

**************************************************************************************************/

h1,
h2,
h3,
h4,
h5,
.h1,
.h2,
.h3,
.h4,
.h5 {
    text-transform: uppercase;
    font-family: neue-haas-grotesk-display, sans-serif;
    font-weight: 700;
    letter-spacing: 0.08ch;
    text-rendering: geometricPrecision;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
a.h1,
a.h2,
a.h3,
a.h4,
a.h5 {
    color: rgba(0, 0, 0, 0.7);
}
h1 a:hover,
h2 a:hover,
h3 a:hover,
h4 a:hover,
h5 a:hover,
a.h1:hover,
a.h2:hover,
a.h3:hover,
a.h4:hover,
a.h5:hover {
    color: inherit;
    text-decoration: none;
}

.parsed-text a,
#tinymce a {
    color: var(--blue);
}

.parsed-text a:hover,
#tinymce a:hover {
    color: var(--blue);
    filter: brightness(80%);
}

a {
    color: rgba(0, 0, 0, 0.7);
}
a:hover {
    color: rgba(0, 0, 0, 1);
    text-decoration: none;
}

body {
    background-color: transparent;
    font-family: neue-haas-grotesk-text, sans-serif;
    min-height: 100vh;
    font-size: 80%;
    text-rendering: geometricPrecision;
}

img {
    image-rendering: -moz-crisp-edges; /* Firefox */
    image-rendering: -o-crisp-edges; /* Opera */
    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
    image-rendering: crisp-edges;
    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
}

/**************************************************************************************************

    Helpers

**************************************************************************************************/

.hide {
    display: none !important;
}

.parsed-text img {
    max-width: 100% !important;
    height: auto !important;
}

/**************************************************************************************************

    Layout

**************************************************************************************************/

#app {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: var(--coal);
}

main {
    flex-grow: 1;
    display: flex;
}

main > .row {
    flex-grow: 1;
}

.main-content {
    background-color: white;
    box-shadow: 0px 0px 6px 3px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    border-radius: 20px;
    margin: 10px 0;
}

/* Header */

.navbar {
    background-color: var(--coal) !important;
}

.navbar .navbar-brand img {
    height: 50px;
    margin-top: -5px;
    margin-right: 5px;
    image-resolution: 100dpi;
}

.navbar .navbar-brand {
    font-family: neue-haas-grotesk-display, sans-serif;
    font-size: 42px;
    line-height: 1.2;
    font-weight: 900;
    font-style: normal;
    letter-spacing: 0.15ch;

    color: var(--white);
    -webkit-text-fill-color: var(--coal);
    -webkit-text-stroke-width: 1.2px;
    -webkit-text-stroke-color: var(--blue);
    text-rendering: geometricPrecision;
    padding: 0;
}

.navbar .nav-item {
    text-transform: uppercase;
    font-family: neue-haas-grotesk-display, sans-serif;
    font-weight: 500;
    font-style: normal;
    letter-spacing: 0.12ch;
}

.navbar .nav-item .nav-link {
    white-space: nowrap;
    color: var(--light-purple) !important;
}

.navbar .nav-item .nav-link:hover {
    color: var(--purple) !important;
}

.navbar .nav-item .nav-link.text-warning {
    color: var(--red) !important;
}

.navbar .nav-item .nav-link.text-warning:hover {
    color: var(--dark-red) !important;
}

.navbar .row {
    width: 100%;
}

/* Sidebar */

.sidebar {
    text-align: right;
    padding-right: 0px;
}

.sidebar ul {
    list-style-type: none;
    display: inline-block;
    padding-top: 30px;
}

.sidebar ul li {
    background-color: white;
    border-top-left-radius: 0.25rem;
    border-bottom-left-radius: 0.25rem;
    margin-bottom: 1em;
    padding: 0.4em 0;

    box-shadow: 0px 0px 6px 3px rgba(0, 0, 0, 0.1);
}

.sidebar .sidebar-header,
.sidebar .sidebar-section .sidebar-section-header {
    text-transform: uppercase;
    font-family: neue-haas-grotesk-text, sans-serif;
    font-weight: bold;
}

.sidebar .sidebar-header {
    background-color: var(--dark-purple);
}
.sidebar .sidebar-header a {
    color: white;
}
.sidebar .sidebar-header a:hover {
    background-color: transparent;
    color: rgba(255, 255, 255, 0.8);
}

.sidebar a,
.sidebar-section-header {
    display: block;
    padding: 0.1em 1em;
}

.sidebar a {
    text-transform: uppercase;
    font-family: neue-haas-grotesk-text, sans-serif;
    color: rgba(0, 0, 0, 0.4);
}
.sidebar a:hover {
    color: #16181b;
    background-color: #f8f9fa;
}
.sidebar a:hover,
.sidebar a:active,
.sidebar a:focus,
.sidebar a:link {
    text-decoration: none;
}
.sidebar a:hover {
    text-decoration: none;
}
.sidebar a.active,
.sidebar a.active:hover {
    color: white;
    background-color: var(--dark-purple);
}

.site-mobile-header {
    display: none;
    padding: 10px 20px;
}
/* ... */

